remove secondary skill

--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   </head>
 
   <body>
-    <div id="app">
-      <div class="hello">Hello, World;</div>
+    <div id="home">
+      <div class="hello">Hello World;</div>
       <div class="name">I'm Rahul</div>
       <div class="primary_skill">Web developer</div>
-      <div class="secondary_skill">Email Developer</div>
-      <div class="hobby">Theatre Enthusiast</div>
+      <div class="hobby">Theatre & Travel Enthusiast</div>
     </div>
 
     <script src="src/index.js"></script>
