added gradient to the text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="home">
       <div class="hello">Hello World;</div>
       <div class="name">I'm Rahul</div>
-      <div class="primary_skill">Web developer</div>
+      <div class="primary_skill">Self taught Web developer</div>
       <div class="hobby">Theatre & Travel Enthusiast</div>
     </div>
 
