added basic html structure for each page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       <div class="primary_skill">Self taught Web developer</div>
       <div class="hobby">Theatre & Travel Enthusiast</div>
     </div>
-
+    <div id="about-me"></div>
+    <div id="work"></div>
+    <div id="contact-info"></div>
+    <footer></footer>
     <script src="src/index.js"></script>
   </body>
 </html>
