fixed width for each major section

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   </head>
 
   <body>
-    <div id="home">
+    <div id="home" class="full-page">
       <div class="hello">Hello World;</div>
       <div class="name">I'm Rahul</div>
       <div class="primary_skill">Self taught Web developer</div>
       <div class="hobby">Theatre & Travel Enthusiast</div>
     </div>
-    <div id="about-me"></div>
-    <div id="work"></div>
-    <div id="contact-info"></div>
+    <div id="about-me" class="full-page"></div>
+    <div id="work" class="full-page"></div>
+    <div id="contact-info" class="full-page"></div>
     <footer></footer>
     <script src="src/index.js"></script>
   </body>
