completed footer sectiob

--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
     <div id="about-me" class="full-page"></div>
     <div id="work" class="full-page"></div>
     <div id="contact-info" class="full-page"></div>
-    <footer></footer>
+    <footer>
+      Created with&nbsp;<img
+        class="heart-icon"
+        src="https://img.icons8.com/cotton/64/000000/hearts--v2.png"
+      />&nbsp;by&nbsp;
+      <a
+        class="github-profile"
+        href="https://github.com/pragyes31"
+        target="_blank"
+        >Rahul Nayak</a
+      >
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
