Learned about big O notation and solved an algorithm

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <footer>
       Created with&nbsp;<img
         class="heart-icon"
-        src="https://img.icons8.com/cotton/64/000000/hearts--v2.png"
+        src="https://img.icons8.com/cute-clipart/64/000000/like.png"
       />&nbsp;by&nbsp;
       <a
         class="github-profile"
@@ -30,3 +30,4 @@
     <script src="src/index.js"></script>
   </body>
 </html>
+<!-- <a href="https://icons8.com/icon/114008/heart-outline">Heart Outline icon by Icons8</a> -->
